Updated show page styling. Fixed collapse bug.

--- a/styles/_style.scss
+++ b/styles/_style.scss
@@ -47,9 +47,12 @@ body {
   .site-tagline { font-size: 3.50em }
 }
 .show-title {
-  font-size: 4.2vw;
+  font-size: 12.2vw;
   font-weight: bold;
   line-height: 1em;
+}
+@media (min-width: 576px) and (max-width: 767.98px) {
+  font-size: 6.2vw;
 }
 .fav-filter-button {
   color: #6D757D;
@@ -155,7 +158,7 @@ table {
     height: 100%;
   }
   .site-title a:link, .site-title a:visited {
-    color: white ;
+    color: rgb(124, 124, 124) ;
   }
   .site-title a:hover {
     color: #6D757D;
@@ -203,10 +206,14 @@ table {
     border-right-color: #dee4e8;
   }
   table {
-    background-color: gray;
+    background-color: #343a40;
   }
   .table th, .table td, .table thead th {
     border: 1px solid rgb(82, 82, 82);
+    color: rgb(180, 180, 180);
+  }
+  .table thead th {
+    color: white;
   }
 }
 
